log
Fri 21 Apr 2023 06:49:58 PM UTC: 
 treemap.c | 25 ++++++++++---------------
 1 file changed, 10 insertions(+), 15 deletions(-)
 tests:  1|8
total_score: 0/70
e9310fe
Fri 21 Apr 2023 07:37:10 PM UTC: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  1|8
total_score: 0/70
b2c0fac
Fri 21 Apr 2023 07:38:49 PM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  3|8
total_score: 0/70
f11a6c3
Fri 21 Apr 2023 07:39:07 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|8
total_score: 0/70
aaa7dde
Fri 21 Apr 2023 07:41:39 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:42:3: error: ‘new’ undeclared (first use in this function)
   42 |   new->lower_than = lower_than;
      |   ^~~
treemap.c:42:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
ac3feb0
Fri 21 Apr 2023 07:41:51 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
bb21d3a
